# kosmos

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  prd.md  pyproject.toml  requirements.txt
.ralphy/: progress.txt
docs/: DEMO_SCRIPT.md  architecture.md  ethical_usage.md
examples/: SAMPLE_OUTPUTS.md  __init__.py  hohmann_transfer.py  kepler_orbit.py  sample_queries.py
src/kosmo/: __init__.py  __main__.py  agent.py  cli.py  errors.py
src/kosmo/prompts/: __init__.py  cosmology_templates.py  react_prompt.py
src/kosmo/tools/: __init__.py  code_executor.py  knowledge_base.py  plotter.py  web_search.py
tests/: __init__.py  test_agent.py  test_agent_flow.py  test_cli.py  test_code_executor.py  test_cosmology_queries.py  test_cosmology_templates.py  test_demo_script.py  test_dockerfile.py  test_documentation.py  test_end_to_end.py  test_errors.py  test_hohmann_transfer.py  test_kepler_orbit.py  test_knowledge_base.py  test_plotter.py  test_sample_queries.py  test_session_memory.py  test_web_search.py
